Bug 157468 - Can't use shortcuts with meta (super_L/super_R) key
Summary: Can't use shortcuts with meta (super_L/super_R) key
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_keys (other bugs)
Version First Reported In: unspecified
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Michael Jansen
URL:
Keywords:
: 168350 366251 402983 403509 (view as bug list)
Depends on:
Blocks:
 
Reported: 2008-02-09 01:18 UTC by Marek Aaron Sapota
Modified: 2020-04-30 16:51 UTC (History)
10 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.19.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Marek Aaron Sapota 2008-02-09 01:18:55 UTC
Version:            (using KDE 4.0.0)
Installed from:    Gentoo Packages
Compiler:          gcc version 4.2.2 (Gentoo 4.2.2 p1.0) 
OS:                Linux

When I go to systemsettings->keyboard&mouse and set a shortcut to for example meta-x, then I get displayed four rectangles, then dash and x (like with alt or control, but four rectangles instead of meta/win or anything). Now, the shortcut is not bound to meta-x, but to meta itself, and only one click triggers an action. All default shortcuts using meta key work well and appear well.
Comment 1 Marek Aaron Sapota 2008-02-09 01:19:47 UTC
I'm using kde 4.0.1 but it wasn't on list.
Comment 2 FiNeX 2008-11-13 23:48:58 UTC
fixed in more recent version.
Comment 3 FiNeX 2008-12-07 20:47:20 UTC
*** Bug 168350 has been marked as a duplicate of this bug. ***
Comment 4 johannes.thraen 2010-07-07 16:09:46 UTC
I am not sure whether Bug 168350 is really a duplicate. If it is, it holds a better description of the behavior.

KDE definitely gets meta, super and hyper wrong 
My description is as follows: first xmodmap output for modifiers

xmodmap:  up to 4 keys per modifier, (keycodes in parentheses):

shift       Shift_L (0x32),  Shift_R (0x3e)
lock      
control     Control_L (0x42),  Control_R (0x69)
mod1        Alt_L (0x40),  Alt_R (0x6c),  Meta_L (0xcd)
mod2        Num_Lock (0x4d)
mod3      
mod4        Super_L (0x85),  Super_R (0x86),  Super_L (0xce),  Hyper_L (0xcf)
mod5        ISO_Level3_Shift (0x5c),  Mode_switch (0xcb)


1. my (physical) windows-key produces a Super_L with xev, BUT
   when I use it in a shortcut combination in kde input action settings it
   will get recognized as meta_L. Nonetheless the resulting shortcut will work.

2. when I map my (physical) LControl-key to Hyper_L (and check it with xev) 
   and try to use it in a shortcut combination with another nonmodifier
   kde input action settings will recognize it as something weird 
   (strange nonlatin letters will appear in the shortcut-box) and
   the combination will get recognized as a single keypress, no modifier, but 
   as such it will work.

3. when I map my LControl-key to Super_L it will work as the windows key (see 1)
4. when I map my LControl-key to Meta_L and try to use it in a shortcut 
   combination, KDE will recognize it as an "Alt".. combination. Nonetheless 
   the combination will work, also when I press the real Alt.

Please reopen the bug, I'm using KDE 4.4.2 on Kubuntu 10.4., so it is definitely not repaired in a more recent version as stated above.
Comment 5 Ryan Paul 2010-08-04 01:26:37 UTC
I'm still experiencing this problem in the KDE 4.5 RC on Ubuntu 10.04.
Comment 6 qMax 2011-01-18 19:27:15 UTC
still in 4.5.1/ubuntu 10.10
seems like it's not a bug, but broken as designed.
Comment 7 Josip Gracin 2012-05-19 06:18:19 UTC
Still not working in Kubuntu 12.04 (KDE 4.8).  Hyper, Super and Mode_switch are not treated as modifiers, but instantly produce funny looking characters when pressed in any "Customize shortcut" dialog.

My xmodmap is set up like this:

% xmodmap -pm
xmodmap:  up to 3 keys per modifier, (keycodes in parentheses):

shift       Shift_L (0x32),  Shift_R (0x3e)
lock      
control     Control_L (0x42),  Control_R (0x69)
mod1        Alt_L (0x40),  Alt_L (0xcc)
mod2        Hyper_L (0x86),  Hyper_L (0x87),  Hyper_L (0xcf)
mod3        Super_L (0x25),  Super_L (0xce)
mod4        Meta_L (0x85),  Meta_L (0xcd)
mod5        Mode_switch (0x6c),  Mode_switch (0xcb)
Comment 8 Andrew Crouthamel 2018-11-09 00:57:52 UTC
Dear Bug Submitter,

This bug has been stagnant for a long time. Could you help us out and re-test if the bug is valid in the latest version? I am setting the status to NEEDSINFO pending your response, please change the Status back to REPORTED when you respond.

Thank you for helping us make KDE software even better for everyone!
Comment 9 Andrew Crouthamel 2018-11-18 03:21:55 UTC
Dear Bug Submitter,

This is a reminder that this bug has been stagnant for a long time. Could you help us out and re-test if the bug is valid in the latest version? This bug will be moved back to REPORTED Status for manual review later, which may take a while. If you are able to, please lend us a hand.

Thank you for helping us make KDE software even better for everyone!
Comment 10 Nate Graham 2019-11-25 05:13:15 UTC
*** Bug 403509 has been marked as a duplicate of this bug. ***
Comment 11 Nate Graham 2019-11-25 05:13:30 UTC
*** Bug 402983 has been marked as a duplicate of this bug. ***
Comment 12 Nate Graham 2020-01-12 05:57:22 UTC
*** Bug 366251 has been marked as a duplicate of this bug. ***
Comment 13 David Redondo 2020-04-30 16:51:11 UTC
Git commit 1ee6660ceb62d4584a5371d0cce107b7008e75df by David Redondo.
Committed on 30/04/2020 at 16:51.
Pushed by davidre into branch 'master'.

Rewrite of the global shortcuts kcm

Summary:
This is a total rewrite of the global shortcuts kcm from scratch. It uses an
abstract item model backend with a qml frontend. This resolves some issues the
old kcm inherently had because it just stacked KShortcutEditors. First it enables
a global serach/filter which either matches the component name, actions, default
or set key combinations across components. Secondly KGlobalAccel can have multiple
default/active key combinations for each action - the old kcm only exposed two each.
The new kcm displays all default or set key combinations.
The main visual structure is similiar to the old kcm. On the left there is a list
with all components but rather than divided into "Application Launchers" and
"Other Shortcuts" the sections are now called "Applications" and "System Services"
(cf. notifications kcm) and the components are now assigned whether the service
we find for a component is an application or not rather if the component was
added via .desktop file. In the main view the shortcuts are displayed. Each item
corresponds to one action. Initially each item is collapsed and shows the action
name and a list of the currently set key combinations for that action. In the
expanded form all default shortcuts are shown which can be activated or
deactivated and all other active shortcuts ("Custom Shortcuts"). It is possible
to change, remove or add new custom shortcuts.
The kcm and model communicate directly with the daemon over DBus. This removes
the need to awkwardly construct actions to pass to the KGlobalAccel API.
Related: bug 213101, bug 230583, bug 250121, bug 251437, bug 272554, bug 318964, bug 341817, bug 348264, bug 366257, bug 369020, bug 388574, bug 393403, bug 408942, bug 416149, bug 416737, bug 417915, bug 419215, bug 419515, bug 419624, bug 419692, bug 419825, bug 419909, bug 420093
FIXED-IN: 5.19.0

Closes T7267

Test Plan:
kcmshell5 kcm_keys
{F8243559}

{F8243560}

{F8243561}

{F8243562}

{F8243563}

{F8243564}

Reviewers: #vdg, #plasma, ngraham

Reviewed By: #vdg, ngraham

Subscribers: GB_2, broulik, davidedmundson, nicolasfella, ngraham, iasensio, plasma-devel

Tags: #plasma

Maniphest Tasks: T7267

Differential Revision: https://phabricator.kde.org/D28744

M  +43   -33   kcms/keys/CMakeLists.txt
D  +0    -29   kcms/keys/ChangeLog
M  +1    -6    kcms/keys/Messages.sh
D  +0    -7    kcms/keys/README
D  +0    -84   kcms/keys/export_scheme_dialog.cpp
D  +0    -59   kcms/keys/export_scheme_dialog.h
D  +0    -35   kcms/keys/export_scheme_dialog.ui
A  +82   -0    kcms/keys/filteredmodel.cpp     [License: GPL (v2/3)]
A  +46   -0    kcms/keys/filteredmodel.h     [License: GPL (v2/3)]
D  +0    -89   kcms/keys/globalshortcuts.cpp
D  +0    -44   kcms/keys/globalshortcuts.h
A  +198  -0    kcms/keys/kcm_keys.cpp     [License: GPL (v2/3)]
R  +1    -1    kcms/keys/kcm_keys.desktop [from: kcms/keys/keys.desktop - 099% similarity]
A  +74   -0    kcms/keys/kcm_keys.h     [License: GPL (v2/3)]
D  +0    -856  kcms/keys/kglobalshortcutseditor.cpp
D  +0    -153  kcms/keys/kglobalshortcutseditor.h
D  +0    -130  kcms/keys/kglobalshortcutseditor.ui
A  +216  -0    kcms/keys/package/contents/ui/ShortcutActionDelegate.qml     [License: GPL (v2+)]
A  +302  -0    kcms/keys/package/contents/ui/main.qml     [License: GPL (v2+)]
A  +17   -0    kcms/keys/package/metadata.desktop
D  +0    -77   kcms/keys/select_application.ui
D  +0    -102  kcms/keys/select_scheme_dialog.cpp
D  +0    -51   kcms/keys/select_scheme_dialog.h
D  +0    -150  kcms/keys/select_scheme_dialog.ui
A  +489  -0    kcms/keys/shortcutsmodel.cpp     [License: GPL (v2+)]
A  +112  -0    kcms/keys/shortcutsmodel.h     [License: GPL (v2/3)]

https://commits.kde.org/plasma-desktop/1ee6660ceb62d4584a5371d0cce107b7008e75df